[tool.poetry]
name = "apollo"
version = "0.1.0"
description = ""
authors = ["alexeev-dev <bro.alexeev@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
numpy = "^2.1.1"
pycolor-palette-loguru = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
